--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [custom/asides/about.html, asides/recent_posts.html, custom/asides/github_small.html, custom/asides/tag_cloud.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html, custom/asides/brought.html]
+default_asides: [custom/asides/about.html, asides/recent_posts.html, custom/asides/github_small.html, custom/asides/tag_cloud.html, custom/asides/brought.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -70,12 +70,12 @@ github2_show_profile_link: false
 github2_skip_forks: true
 
 # Twitter
-twitter_user: 
+twitter_user: @rackspace
 twitter_tweet_count: 4
 twitter_show_replies: false
-twitter_follow_button: true
+twitter_follow_button: false
 twitter_show_follower_count: false
-twitter_tweet_button: true
+twitter_tweet_button: false
 
 # Google +1
 google_plus_one: false
