--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ github2_show_profile_link: false
 github2_skip_forks: true
 
 # Twitter
-twitter_user: @rackspace
+twitter_user: rackspace
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: false
